--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "4.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
